kustomize/production/nextcloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud-production
spec:
  parentRefs:
    - name: home-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - nextcloud.home.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          port: 80
